--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "server.js",
   "license": "MIT",
   "devDependencies": {
-    "cucumber": "^3.1.0"
+    "cucumber": "^3.1.0",
+    "node-fetch": "^1.7.3"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "uuid": "^3.1.0"
   }
 }
