--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Microservice for voting on GitHub issues using OpenCollective",
   "main": "server.js",
   "license": "MIT",
+  "scripts": {
+    "test": "features/run/all",
+    "build": "webpack"
+  },
   "devDependencies": {
     "cucumber": "^3.1.0",
     "cucumber-electron": "^2.3.1",
@@ -11,7 +15,8 @@
     "jsdom": "^11.3.0",
     "mocha": "^4.0.1",
     "node-fetch": "^1.7.3",
-    "sinon": "^4.1.2"
+    "sinon": "^4.1.2",
+    "webpack": "^3.8.1"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
