--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cucumber": "^3.1.0",
     "cucumber-electron": "^2.3.1",
     "electron": "^1.7.9",
+    "eventsource": "^1.0.5",
     "jsdom": "^11.3.0",
     "mocha": "^4.0.1",
     "node-fetch": "^1.7.3",
@@ -22,7 +23,9 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "hyperx": "^2.3.2",
+    "json-stable-stringify": "^1.0.1",
     "preact": "^8.2.6",
+    "ssestream": "^1.0.0",
     "uuid": "^3.1.0"
   }
 }
