--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "json-stable-stringify": "^1.0.1",
     "preact": "^8.2.6",
     "ssestream": "^1.0.0",
+    "util.promisify": "^1.0.0",
     "uuid": "^3.1.0"
   }
 }
