--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cucumber-electron": "^2.3.1",
     "electron": "^1.7.9",
     "eventsource": "^1.0.5",
+    "glob": "^7.1.2",
     "jsdom": "^11.3.0",
     "mocha": "^4.0.1",
     "node-fetch": "^1.7.3",
@@ -22,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "github": "^12.0.5",
     "hyperx": "^2.3.2",
     "json-stable-stringify": "^1.0.1",
     "preact": "^8.2.6",
