--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bulma": "^0.6.1",
+    "css-loader": "^0.28.7",
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "hyperx": "^2.3.2",
     "json-stable-stringify": "^1.0.1",
     "preact": "^8.2.6",
     "ssestream": "^1.0.0",
+    "style-loader": "^0.19.0",
     "util.promisify": "^1.0.0",
     "uuid": "^3.1.0"
   }
