--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.28.7",
     "debug": "^3.1.0",
     "express": "^4.16.2",
+    "github": "^13.0.1",
     "hyperx": "^2.3.2",
     "json-stable-stringify": "^1.0.1",
     "preact": "^8.2.6",
