--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hyperx": "^2.3.2",
     "json-stable-stringify": "^1.0.1",
     "preact": "^8.2.6",
+    "simple-oauth2": "^1.5.0",
     "ssestream": "^1.0.0",
     "style-loader": "^0.19.0",
     "util.promisify": "^1.0.0",
